# WealthWise-AI

./: .env.example  .gitignore  AI_HANDOFF.md  CURSOR_INSTRUCTIONS.md  PROJECT_RULES.md  README.md  docker-compose.yml
WealthWise-AI-main/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
WealthWise-AI-main/backend/alembic/: env.py
WealthWise-AI-main/backend/app/: main.py
WealthWise-AI-main/backend/tests/: conftest.py
backend/: .dockerignore  .env.example  .env.test  .flake8  Dockerfile  WealthWise_AI_Backend_Architecture.docx  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260625_2339_5b10b3f6c795_initial_schema.py  20260625_processing_pipeline.py  20260706_1223_4cf34b8dfa62_transaction_unique_constraint.py  20260706_transaction_confidence.py  20260707_portfolio_holdings.py  20260714_financial_profile_chat.py  20260715_ai_coach_foundation.py  20260720_create_products.py  20260720_investment_recommendation_snapshots.py  20260721_static_market_metadata_columns.py  20260723_activity_logs.py  20260723_admin_audit_logs.py  20260723_user_soft_delete_last_login.py  20260724_0939_e6f88aaface5_create_password_reset_tokens.py
backend/app/: __init__.py  main.py
backend/app/clients/: gemini_client.py  ocr_client.py  s3_client.py
backend/app/core/: config.py  constants.py  dependencies.py  logger.py  security.py
backend/app/data/: market_metadata_seed.json  product_catalog.json
backend/app/database/: base.py  session.py
backend/app/enums/: activity_type_enum.py  admin_audit_action_enum.py  chat_session_status_enum.py  risk_profile_enum.py  role_enum.py  statement_status_enum.py
backend/app/exceptions/: custom_exceptions.py  handlers.py
backend/app/extraction/: __init__.py  base.py  docling_extractor.py  result.py
backend/app/market/: __init__.py  abstract_market_provider.py  hybrid_market_provider.py  market_data_provider.py  market_metadata_cache.py  market_sync_service.py  mock_market_provider.py  models.py
backend/app/middleware/: logging_middleware.py  rate_limit_middleware.py
backend/app/models/: __init__.py  activity_log.py  admin_audit_log.py  ai_coach_conversation.py  ai_coach_message.py  ai_conversation.py  financial_chat_message.py  financial_chat_session.py  financial_profile.py  health_score.py  health_score_snapshot.py  investment_product.py  investment_recommendation_snapshot.py  password_reset_token.py  portfolio.py  portfolio_holding.py  risk_profile.py  (+4 more)
backend/docling_poc/: README.md  comparison.txt  main.py  requirements.txt
backend/poc/: paddleocr_poc.py
backend/poc_output/: paddleocr_raw_text.txt  paddleocr_result.json
backend/poc_output_hdfc/: paddleocr_raw_text.txt  paddleocr_result.json
backend/tests/: conftest.py
(+1505 files in other folders)
